# downwards_facing_camera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annotateImage.py  imaging_steps.txt  pycoralTest.py  testMaskProcess.py  testYolo.cc  testYolo.py
calibration_scripts/: arucoCalibration.cpp  arucoStereoCalibration.cpp  calibrationTools.py  cameraCalibration.cpp  cameraCalibration.hpp  cameraCalibration.py  depthCalibration.py  pointGenerator.cpp  stereoCalibration.cpp  stereoCalibration.hpp  stereoCalibration.py
calibration_scripts/Offboard_Calibration_Scripts/: intrinsic_calibration.py  stereo_calibration.py
dfc_daemon/: CMakeLists.txt  CanmoreLinuxServer.cpp  DFCDaemon.hpp  HeartbeatTransmitter.cpp  PTYMaster.cpp  RemoteTTYServer.cpp  RemoteTTYServer.hpp  get_unique_serial.cpp  main.cpp  setup_vcan.sh
dfc_daemon/include/: DFCDaemon.hpp
dfc_daemon/src/: HeartbeatTransmitter.cpp  PTYMaster.cpp  SerialLookup.cpp  SystemdNotifier.cpp  main.cpp
dfc_daemon/systemd/: dfc_daemon@.service.in
img_can/img_rx/: CMakeLists.txt  CanmoreImageReceiver.cpp  CanmoreImageReceiver.hpp  main.cpp
img_can/img_tx/: CMakeLists.txt  CanmoreImageTransmitter.hpp  main.cpp
img_rx/: CMakeLists.txt  CameraSocketListener.cpp  CameraSocketListener.hpp
img_tx/: CMakeLists.txt  CanmoreImageTransmitter.cpp
include/: coral_yolo.hpp  ryml_all.hpp  stereoConfig.hpp
include/agents/: cameraAgent.hpp  orientationAgent.hpp  stereoAgent.hpp  yoloAgent.hpp
include/calibration/: pointGenerator.hpp  stereoCalibration.hpp
include/tools/: CanmoreImageTransmitter.hpp  DataUtils.hpp  mySerial.h
libcoral_bindings/: BUILD  build.sh  coral_yolo.cpp  coral_yolo.hpp  main.cpp  testYolo.cc  test_libcoral.cc  yoloNoClass.cc
libcoral_bindings/docker/: Dockerfile  docker_compile.sh
micro_ros_raspi/: CMakeLists.txt  build.sh  extract_crosscompile.sh  micro_ros_bindings.cpp
micro_ros_raspi/microros_static_library/library_generation/: library_generation.sh  toolchain.cmake
micro_ros_test/: CMakeLists.txt  DFCMicroROSClient.cpp  DFCMicroROSClient.hpp  main.cpp
micro_ros_things/micro_ros_raspi/include/: micro_ros_transport.h
micro_ros_things/micro_ros_test/: DFCMicroROSClient.hpp
robert_examples/img_tx_example/: CMakeLists.txt  main.cpp
robert_examples/micro_ros_example/: CMakeLists.txt  main.cpp
setup_scripts/: imaging_steps.txt  trigger_enable.txt
setup_scripts/hat_eeprom/: README.md  compile.sh  ext-cam-hat-overlay.dtso  ext-cam-hat-v1-settings.txt  ext-cam-hat.eep  old-ext-cam-hat-overlay.dtso
src/: calibrateCamera.cpp  camera_capture.py  depthAndDetect.cpp  dfcDetect.cpp  main.cpp  runAgents.cpp  runCameras.cpp  testCoral.cpp  yoloInterpreter.cpp
src/agents/: cameraAgent.cpp  orientationAgent.cpp  stereoAgent.cpp  yoloAgent.cpp
stereo_matching_tool/: stereo_matching.py
stereo_matching_tool/config/: config.yml
tools/: CanmoreImageTransmitter.cpp  DFCMicroROSClient.cpp  mySerial.cpp  takeStereoIm.cpp
